Fixing file name casing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/app/EntryPoint.tsx"></script>
+    <script type="module" src="/src/app/entryPoint.tsx"></script>
   </body>
 </html>
